# goal-getter

./: .coverage  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  CLAUDE.md  DEBUG_SESSION_FINDINGS.md  DEVELOPMENT_STATUS.md  Dockerfile  Makefile  README.md  SECURITY.md  SETUP.md  coverage.xml  docker-compose.yml  pyproject.toml  pytest.ini  vercel.json
.github/workflows/: ci.yml  frontend-environment-approval.yml  frontend-release-with-screenshots.yml
api/: __init__.py  db.py  main.py  pyproject.toml  requirements.txt  setup_test_env.sh  test_api_enhanced.py  test_enhanced_schema.py
api/tests/: __init__.py  conftest.py  test_api_security.py  test_basic.py  test_critical_user_flows.py  test_database.py  test_goal_hierarchy_integrity.py  test_integration_real.py
app/: __init__.py  db.py  main.py  requirements.txt
app/tests/: test_api_security.py  test_basic.py  test_database.py
docs/: CREATIVE_VISION.md  FEEDBACK_LOOP.md  IMPLEMENTATION_ROADMAP.md  QUICK_FEEDBACK_GUIDE.md  SCREENSHOT_WORKFLOW_SETUP.md  SIMPLE_FEEDBACK_LOOP.md  USER_APPROVAL_WORKFLOW.md  UV_MIGRATION.md  VERCEL_BRANCHING_STRATEGY.md  git-workflow.md  gpt-setup.md
scripts/: sync_to_production.py  validate_sync.py
supabase/: config.toml
supabase/.temp/: pooler-url  project-ref
supabase/migrations/: 20250420_create_goals_table.sql
web/: .env.backup  .env.example  .eslintrc.json  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  vite.config.ts  vitest.config.ts
web/coverage/: coverage-final.json  index.html  lcov.info
web/coverage/lcov-report/: index.html
web/coverage/lcov-report/src/: App.tsx.html  index.html
web/coverage/lcov-report/src/components/: Auth.tsx.html  GoalInput.tsx.html  GoalTree.tsx.html  NodeCard.tsx.html  index.html
web/coverage/src/: App.tsx.html  index.html
web/coverage/src/components/: Auth.tsx.html  GoalInput.tsx.html  GoalTree.tsx.html  NodeCard.tsx.html  index.html
web/e2e/: critical-user-flows.spec.ts  first.spec.ts
web/src/: App.tsx  index.css  supabase.ts  types.ts  vite-env.d.ts
web/src/__tests__/: App.test.tsx
web/src/__tests__/components/: GoalInput.test.tsx  GoalTree.test.tsx  NodeCard.test.tsx
web/src/__tests__/integration/: Auth.test.tsx  goal-tree-integration.test.tsx
web/src/components/: Auth.tsx  GoalInput.tsx  GoalKanban.tsx  GoalTree.tsx  NodeCard.tsx
web/src/test/: setup.ts
